[package]
name = "rust_dotproduct"
version = "0.1.0"
authors = ["Ching-Chuan Chen <zw12356@gmail.com>", "Alex Moore-Niemi <moore.niemi@gmail.com>"]
edition = "2018"

[dependencies]
packed_simd_2 = "0.3"
rayon = "1.5"
assert_approx_eq = "1.1.0"
indicatif = {version = "0.16", features = ["rayon"]}
ndarray = "0.15"

[[bin]]
name = "original"
path = "src/original.rs"

[[bin]]
name = "fork"
path = "src/fork.rs"
