[package]
name = "rust_dotproduct"
version = "0.1.0"
authors = ["Ching-Chuan Chen <zw12356@gmail.com>", "Alex Moore-Niemi <moore.niemi@gmail.com>"]
edition = "2018"

[dependencies]
packed_simd_2 = "0.3"
rayon = "1.5"
assert_approx_eq = "1.1.0"
indicatif = {version = "0.16", features = ["rayon"]}
ndarray = { version = "0.15", features = ["rayon", "blas"] }
ndarray-npy = "0.8"
ndarray-rand = "0.14"
blas-src = { version = "*", default-features = false, features = ["openblas"] }
# https://github.com/rust-ndarray/ndarray/issues/586
openblas-src = { version = "0.6.1", default-features = false, features = ["cblas"] }

[[bin]]
name = "original"
path = "src/original.rs"

[[bin]]
name = "fork"
path = "src/fork.rs"
